@@ -67,6 +67,18 @@ namespace MonoDevelop.Projects
 			string solFile = Util.GetSampleProject ("resources-tester", "ResourcesTester.sln");
 			Solution sol = (Solution) Services.ProjectService.ReadWorkspaceItem (Util.GetMonitor (), solFile);
 			CheckResourcesSolution (sol);
+
+			BuildResult res = sol.Build (Util.GetMonitor (), "Debug");
+			Assert.AreEqual (0, res.ErrorCount);
+			Assert.AreEqual (0, res.WarningCount);
+			Assert.AreEqual (1, res.BuildCount);
+
+			string spath = Util.Combine (sol.BaseDirectory, "ResourcesTester", "bin", "Debug", "ca", "ResourcesTesterNamespace.resources.dll");
+			Assert.IsTrue (File.Exists (spath), "Satellite assembly not generated");
+
+			sol.Clean (Util.GetMonitor (), "Debug");
+			Assert.IsFalse (File.Exists (spath), "Satellite assembly not removed");
+			Assert.IsFalse (Directory.Exists (Path.GetDirectoryName (spath)), "Satellite assembly directory not removed");
 		}
 		
 		public static void CheckResourcesSolution (Solution sol)
